<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="@dimen/tile_view_height"
    android:layout_marginBottom="16dp"
    card_view:cardCornerRadius="0dp"
    card_view:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/property_photo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tile_view_height"
            android:layout_centerInParent="true"
            android:contentDescription="@string/image_description"
            android:scaleType="centerCrop"
            android:src="@drawable/home1" />

        <LinearLayout
            android:id="@+id/icons_container"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignBottom="@id/property_photo"
            android:background="@color/btn_trans_background"
            android:orientation="vertical"
            android:paddingBottom="@dimen/padding_bottom"
            android:paddingTop="@dimen/padding_top">

            <TextView
                android:id="@+id/property_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/txt_margin_left"
                android:gravity="bottom"
                android:text="Town house in Westlands"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/cardview_light_background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/property_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/txt_margin_left"
                    android:layout_marginRight="@dimen/txt_margin_right"
                    android:text="Ksh 123 000 000"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/cardview_light_background" />

                <com.friki.mbuthia.propertyfindapp.FontAwesome
                    android:id="@+id/property_bedrooms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/icon_margin_right"
                    android:text="@string/bed_icon"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="@dimen/features_text_size" />

                <TextView
                    android:id="@+id/bedrooms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/property_margin_right"
                    android:text="5"
                    android:textColor="@color/cardview_light_background" />

                <com.friki.mbuthia.propertyfindapp.FontAwesome
                    android:id="@+id/property_bathrooms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/icon_margin_right"
                    android:text="@string/shower_icon"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="@dimen/features_text_size" />

                <TextView
                    android:id="@+id/bathrooms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/property_margin_right"
                    android:text="3"
                    android:textColor="@color/cardview_light_background" />

                <com.friki.mbuthia.propertyfindapp.FontAwesome
                    android:id="@+id/property_car_parks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/icon_margin_right"
                    android:text="@string/car_icon"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="@dimen/features_text_size" />

                <TextView
                    android:id="@+id/car_parks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2"
                    android:textColor="@color/cardview_light_background" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>