<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
<android.support.design.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp">


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
         <!--   <com.sembozdemir.viewpagerarrowindicator.library.ViewPagerArrowIndicator
                android:id="@+id/viewPagerArrowIndicator"
                android:layout_width="match_parent"
                android:layout_height="match_parent">-->

            <android.support.v4.view.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="270dp">
            </android.support.v4.view.ViewPager>
                <ImageButton
                    android:id="@+id/left_nav"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?android:selectableItemBackground"
                    android:layout_gravity="center_vertical|left"
                    android:src="@mipmap/ic_left_indicator" />

                <ImageButton
                    android:id="@+id/right_nav"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?android:selectableItemBackground"
                    android:layout_gravity="center_vertical|right"
                    android:src="@mipmap/ic_right_indicator" />

<!--
            </com.sembozdemir.viewpagerarrowindicator.library.ViewPagerArrowIndicator>
-->
            </FrameLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar1"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="1dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:id="@+id/icons_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/property_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="bottom"
                        tools:text="Town house in Westlands"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/property_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/txt_margin_right"
                            tools:text="Ksh 123 000 000"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

                        <com.friki.mbuthia.propertyfindapp.FontAwesome
                            android:id="@+id/property_bedrooms"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/icon_margin_right"
                            android:text="@string/bed_icon"
                            android:textSize="@dimen/features_text_size" />

                        <TextView
                            android:id="@+id/bedrooms"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/property_margin_right"
                            tools:text="5"/>

                        <com.friki.mbuthia.propertyfindapp.FontAwesome
                            android:id="@+id/property_bathrooms"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/icon_margin_right"
                            android:text="@string/shower_icon"
                            android:textSize="@dimen/features_text_size" />

                        <TextView
                            android:id="@+id/bathrooms"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/property_margin_right"
                            tools:text="3"/>

                        <com.friki.mbuthia.propertyfindapp.FontAwesome
                            android:id="@+id/property_car_parks"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/icon_margin_right"
                            android:text="@string/car_icon"
                            android:textSize="@dimen/features_text_size" />

                        <TextView
                            android:id="@+id/car_parks"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="2" />

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp">

                <TextView
                    style="@style/Widget.CardContent"
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/adjacent_margin_top"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    tools:text=""
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/owner_photo"
                        android:layout_width="100px"
                        android:layout_height="100px"

                        android:layout_marginRight="32dp"
                        android:contentDescription="@string/image_description"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/ic_owner_round" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/owner_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text=""
                            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/btn_call"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="16dp"
                                android:background="@color/colorPrimary"
                                android:text="@string/call"
                                android:textColor="@color/cardview_light_background" />

                            <Button
                                android:id="@+id/btn_email"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@color/colorblue"
                                android:text="@string/email"
                                android:textColor="@color/cardview_light_background"/>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
</layout>